--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-html-parser": "^2.0.2",
+    "react-iframe": "^1.8.0",
     "react-paginate": "^6.2.1",
     "react-scripts": "^2.1.8",
     "react-youtube": "^7.9.0"
