--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-iframe": "^1.8.0",
     "react-paginate": "^6.2.1",
     "react-scripts": "^2.1.8",
+    "react-unity-webgl": "^7.0.9",
     "react-youtube": "^7.9.0"
   },
   "scripts": {
