--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "http://hmg.labtime.ufg.br/ava-mec-ws/instituicao/ufrgs/conteudo/modulo/1721/",
+  "homepage": ".",
   "devDependencies": {}
 }
